# libdict

./: CMakeLists.txt  demo.c
src/: hashtable.c  hashtable2.c  hashtable_common.c
test/: hashtable_test.c
